# stock_cli

./: .env  Cargo.toml  README.md
src/: main.rs
