[package]
name = "stock_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
exitfailure = "0.5.1"
plotters = "0.3.5"
reqwest = { version = "0.11.2", features = ["json"] }
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
structopt = "0.3.26"
tokio = { version = "1.33.0", features = ["full"] }
